init sand box controllers